--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,3 @@
-apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
-
 apply plugin: "com.android.application"
 
 import com.android.build.OutputFile
@@ -225,3 +223,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+apply plugin: 'com.google.gms.google-services'
