--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-elements": "^2.0.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-get-random-values": "^1.4.0",
     "react-native-reanimated": "^1.9.0",
