--- a/ios/brainhack.xcodeproj/xcshareddata/xcschemes/brainhack.xcscheme
+++ b/ios/brainhack.xcodeproj/xcshareddata/xcschemes/brainhack.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "brainhack.app"
+               BuildableName = "Qnywhere.app"
                BlueprintName = "brainhack"
                ReferencedContainer = "container:brainhack.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "brainhack.app"
+            BuildableName = "Qnywhere.app"
             BlueprintName = "brainhack"
             ReferencedContainer = "container:brainhack.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "brainhack.app"
+            BuildableName = "Qnywhere.app"
             BlueprintName = "brainhack"
             ReferencedContainer = "container:brainhack.xcodeproj">
          </BuildableReference>
